--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html
   <head>
-    <title></title>
+    <title>Excursion</title>
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
+
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
       <p><a class="download" href="#">Download Excursion (Coming Soon!)</a></p>
-
+      <video autoplay loop muted>
+      <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type"video/mp4">
+      </video>
+<h2>Your personal travel guide</h2>
+<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="desert landscape">
+<p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="cellphone"></p>
+<h2>Coming Soon for iPhone and Android</h2>
+<p><a class="download" href="#">Download Excursion (Coming Soon!)</a></p>
+<div class="copyright">
+<p>&copy; Excursion</p>
+</div>
   </body>
 </html>
